Fixed UI alignment issues for add question bank and usersetting pop ups

--- a/WebContent/styles/new-ui.css
+++ b/WebContent/styles/new-ui.css
@@ -535,8 +535,10 @@ span.glyphicon.glyphicon-info-sign {
 .booksContainer{
 	height: 350px;
     overflow-y: auto;
-    margin-top: -15px;
+    margin-top: -10px;
     padding-top: 10px;
+    width: 97%;
+    margin-left: 7px;
 }
 .form-signin button {
     width: 380px;
